--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,11 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script
-      src="https://kit.fontawesome.com/a12c5808a1.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>React App</title>
+    <title>My Portfolio App</title>
   </head>
   <body bgcolor="0F1624">
     <noscript>You need to enable JavaScript to run this app.</noscript>
